Release 2.4.0 (#115)
* GitHub workflows Sonar Cloud analysis

* Refactored to avoid NPE warning.

Although you can skip a loop by making the list empty, it's cleared to
be explicit that the code should not be run if reader is null.

* Moved declarations to top of file.

SonarCloud says that the @Mocks need to be declared before use.

* input can be null, so null checks added.

* Init next version.

* Update Maven Shade plugin

* Use slightly different configuration for maven package plugin

* Add missing icon for Purchase Price icon in GUI

* Added a ActiveGeneratorNamesRequestHandler (#97)

* Added a ActiveGeneratorNamesRequestHandler

* Rearrange code to correspond to my ugly codding style.

* Change request name to active-generator-names

The previous name was cryptic and did not match to return value.

* Don't run sonarcloud with PRs (#98)

PRs don't have access to the sonar secret and
all PR builds would fail otherwise.

* Implement required biomes in default generators.

* Implement GeneratorDataRequestHandler.

Handler requires `generator` metadata where value are the requested generator id.

If the input is incorrect (missing generator metadata), it returns null.
If there is no generator with given ID, it returns empty map.
If there is a generator, it returns full (raw) data about it.

* Fixes a bug in permission check which fails if owner was not online.

* Update to Spigot 1.17 and BentoBox 1.17

- Add pladdon class.
- Add missing biomes.(#104)

* Fix Java16 compile and test issues.

Does this addon need shade plugin?

* Update generatorTemplate.yml

* Fixes an issue when color codes were left into UUID's.

* Update to Spigot 1.18 and Java 17.

Update to new Biome types.

* Apply Java 17 surefire allowances.

* Update .gitignore

* Update code to Java 17 structures and syntax.

Fixed some JavaDoc errors.

* Build with Java 17 in Github Action

* Fixes a bug with 0 priced generators 